--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -17,7 +17,7 @@
 <header>
     <nav class="navbar navbar-fixed navbar-expand-lg navbar-light bg-grey my-home-container">
 
-        <a class="nav-link" href="/"><img id="home-logo" th:src="@{/assets/images/logo.jpg}" alt=""></a>
+        <a class="nav-link" href="/"><img id="home-logo" th:src="@{./assets/images/logo.jpg}" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
