--- a/src/main/resources/templates/edit-brand.html
+++ b/src/main/resources/templates/edit-brand.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="/about">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Product</a>
+                    <a class="nav-link" href="/products">Product</a>
                 </li>
                 <li th:if="${session.user == null && session.brand == null}" class="nav-item">
                     <a class="nav-link" href="/auth">Sign In</a>
